--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!------------ vanilla sanimation scripts ------------>
-    <script defer src="/src/vanilla/code-load.js"></script>
+    <!------------- vanilla animation scripts ------------>
+    <script defer type="module" src="/src/vanilla/code-load.js"></script>
   </body>
 </html>
