--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <!------------- vanilla animation scripts ------------>
-    <script defer type="module" src="/src/vanilla/code-load.js"></script>
+    <script defer type="module" src="/src/vanilla/shuffle-chars.js"></script>
   </body>
 </html>
