--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <!------------- vanilla animation scripts ------------>
+    <script defer type="module" src="/src/vanilla/draggable.js"></script>
     <script defer type="module" src="/src/vanilla/shuffle-chars.js"></script>
   </body>
 </html>
