flying hint wip

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <!------------- vanilla animation scripts ------------>
     <script defer type="module" src="/src/vanilla/draggable.js"></script>
     <script defer type="module" src="/src/vanilla/shuffle-chars.js"></script>
+    <script defer type="module" src="/src/vanilla/flying-hint.js"></script>
   </body>
 </html>
